--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ body {
     padding: 0;
 }
 
-header {
+header{
     background-color: rgb(95, 61, 11);
-    color: azure;
-    padding: 0;
+    color: whitesmoke;
+    padding: 40px;
     text-align: center;
 }
 
@@ -31,6 +31,14 @@ nav a {
     color: azure;
     text-decoration: none;
 }
+footer {
+    text-align: center;
+    display: :flex;
+    background-color: black; 
+    color: white;
+    margin-bottom: 0px;
+    list-style: none;
+}
 
 body header h1{
     margin: 0;
@@ -38,6 +46,32 @@ body header h1{
     height: 100px;
     width: 100%;
 }
-div section h1{
-    text-align: center;
+img{
+    width: 500px;
+}
+div section {
+    h1{
+        border: black;
+        background-color: ;
+    }
+    /* text-align: center; */
+    margin-left: 100px;
+}
+aside{
+    text-align: right;
+    background-color: rgb(95, 61, 11);
+    border: rgb(124, 21, 21);
+    margin-left: 900px;
+    margin-right: 50px;
+    width: -100%;
+    height: 100px;
+    margin: 50;
+}
+
+#ul{
+    background-color: black;
+}
+
+.clasee{
+    color: white;
 }
